Added link highlighting; added CV; fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
     <div class="container is-max-desktop">
       <div class="columns">
         <div class="column is-one-third">
-          <img src="/assets/me.jpg" class="image is-256x256 is-block mx-auto"/>
+          <img src="/assets/me.jpg" class="image is-256x256 is-block mx-auto" alt="A picture of me"/>
         </div>
         <div class="column">
           <h1 class="title">
@@ -28,7 +28,7 @@ title: Home
             </p>
 
             <div class="buttons">
-              <a class="button is-info is-outlined">
+              <a class="button is-info is-outlined" href="/assets/Arya_Das_CV.pdf" target="_blank">
                 <span class="icon">
                   <i class="fa-solid fa-download"></i>
                 </span>
@@ -47,7 +47,7 @@ title: Home
     <h2>Experience</h2>
     <div class="columns mb-5">
       <div class="column is-one-third">
-        <img src="/assets/iitklogo.jpg" class="image is-128x128 is-block mx-auto"/>
+        <img src="/assets/iitklogo.jpg" class="image is-128x128 is-block mx-auto" alt="IIT Kanpur Logo"/>
       </div>
       <div class="column">
         <h4>Project Associate</h4>
@@ -59,7 +59,7 @@ title: Home
 
     <div class="columns">
       <div class="column is-one-third">
-        <img src="/assets/ardnlogo.png" class="image is-128x128 is-block mx-auto"/>
+        <img src="/assets/ardnlogo.png" class="image is-128x128 is-block mx-auto" alt="ARDN Logo"/>
       </div>
       <div class="column">
         <h4>Google Summer of Code developer</h4>
@@ -80,7 +80,7 @@ title: Home
     <h2>Education</h2>
     <div class="columns mb-5">
       <div class="column is-one-third">
-        <img src="/assets/iitklogo.jpg" class="image is-128x128 is-block mx-auto"/>
+        <img src="/assets/iitklogo.jpg" class="image is-128x128 is-block mx-auto" alt="IIT Kanpur Logo"/>
       </div>
       <div class="column">
         <h4>Indian Institute of Technology, Kanpur</h4>
@@ -93,7 +93,7 @@ title: Home
 
     <div class="columns">
       <div class="column is-one-third">
-        <img src="/assets/iitplogo.jpg" class="image is-128x128 is-block mx-auto"/>
+        <img src="/assets/iitplogo.jpg" class="image is-128x128 is-block mx-auto" alt="IIT Patna Logo"/>
       </div>
       <div class="column">
         <h4>Indian Institute of Technology, Patna</h4>
@@ -112,7 +112,7 @@ title: Home
 
 <section class="section" id="skills">
   <div class="container is-max-desktop content">
-    <h2 id="skills">Skills</h2>
+    <h2>Skills</h2>
 			<div class="columns">
 				<div class="column">
 					<h5>Programming Languages:</h5>
